[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "map-services"
version = "0.1.0"
description = "A Python package providing Swiss Topo elevation services and map utilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SUPSI-DACD-ISAAC"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov", 
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/supsi-dacd-isaac/map-services"
Repository = "https://github.com/supsi-dacd-isaac/map-services"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]